manifests/applications/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: n8n
    app.kubernetes.io/name: n8n
  name: n8n
  namespace: n8n
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: n8n
      app.kubernetes.io/name: n8n
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: n8n
        app.kubernetes.io/name: n8n
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - image: n8nio/n8n
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
        resources:
          requests:
            cpu: 10m
            memory: 312Mi
          limits:
            memory: 312Mi
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: n8n
        ports:
        - containerPort: 5678
          protocol: TCP
          name: http
        volumeMounts:
        - name: database-ca-volume
          mountPath: /etc/ssl/certs/database-ca.crt
          subPath: ca.crt
      volumes:
      - name: database-ca-volume
        secret:
          secretName: database-ca
