manifests/applications/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app.kubernetes.io/instance: n8n
    app.kubernetes.io/name: n8n
  name: n8n
  namespace: n8n
spec:
  ingressClassName: nginx
  rules:
    - host: workflows.toot.community
      http:
        paths:
          - backend:
              service:
                name: n8n
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - workflows.toot.community
      secretName: workflows.toot.community-tls
